# robo_nd_project1

./: CMakeLists.txt  LICENSE  readme.md
model/delete__wheelie_robot_stable_old/: model.config  wheelie_robot_stable.sdf
model/delete__wheelie_robot_stable_old/meshes/: arm.stl  body.stl  rearwheel.stl  wheel.stl
model/wheelie_robot/: model.config  wheelie_robot.sdf
model/wheelie_robot/meshes/: body.stl
model/wheelie_robot/onshape_to_robot/: config.json
model/wheelie_robot_stable/: wheelie_robot_stable.sdf
model/wheelie_robot_stable/meshes/: arm.stl  body.stl
reference/: auto_mod_onshape_sdf.py
script/: arm_torque.cpp  model_bounce.cpp  spin_arm.cpp  welcome.cpp
world/: pos.world  test.world
